# sbs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yaml
docs/: docs.md  documentation.md
examples/: complete_example.cpp  minimal_example.cpp
include/sbs/: sbs.hpp
include/sbs/serializers/: array.hpp  bitset.hpp  chrono.hpp  complex.hpp  deque.hpp  filesystem.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  optional.hpp  set.hpp  string.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  variant.hpp  vector.hpp
tests/: basic_tests.hpp  main.cpp  std_tests.hpp  test.cpp  test.hpp  test_file.hpp  test_helper.cpp  test_helper.hpp
